--- a/src/style.scss
+++ b/src/style.scss
@@ -27,11 +27,14 @@ html {
                     width: 100%;
                     flex-direction: column;
                     justify-content: space-between;
-                    background: url(/pictures/lavender.svg); 
-                    -webkit-background-size: cover;
-                    -moz-background-size: cover;
-                    -o-background-size: cover;
-                    background-size: cover;
+                    background: url(/pictures/lavender-mobil.svg); 
+                    -webkit-background-size: contain;
+                    -moz-background-size: contain;
+                    -o-background-size: contain;
+                    background-size: contain;
+                    @media (min-width: 1024px) {
+                       
+                    }
                         #site-name {
                             margin: auto;
                             text-align: center;
@@ -81,7 +84,7 @@ html {
                                     padding: 1em;
                                     text-transform: uppercase;
                                     font-size: 2em;
-                                    background: transparent;
+                                    background: rgba(255,255,255,0.5);
                                     font-family: 'Lato', sans-serif;
                                     border: solid 1px $color-black;
                                     border-radius: 5px;
@@ -89,32 +92,37 @@ html {
                                     cursor: pointer;
                                     outline: none;
                                     &:hover {
-                                        text-decoration: line-through; 
-                                        background-color: rgba(255, 255, 255, 0.6);
+                                        //text-decoration: line-through; 
+                                        background-color: #fff;
+                                        background: url(/pictures/linethrough.svg);
+                                        background-size: contain;
+                                        background-position: center;
+                                        background-repeat: no-repeat;
                                     }
                                 }
                                 .next-button {
                                     margin-top: 3em;
                                     margin-bottom: 2em;
-                                    outline: none;
+                                    cursor: pointer;
+                                    position: relative;
                                 }
                         }
                         .hide-projects {
                             display: none;
                             .left-content {
-                                width: 50%;
-                                margin-left: 2em;
-                                margin-right: 0.5em;
+                                width: 100%;
+                                // margin-left: 2em;
+                                // margin-right: 2em;
                                 .breathe-home {
-                                    width: 85%;
+                                    width: 100%;
                                 }
                             }
                             .right-content {
-                                width:50%;
-                                margin-left: 0.5em;
-                                margin-right: 2em;
+                                width:100%;
+                                // margin-left: 2em;
+                                // margin-right: 2em;
                                 .breathe-home {
-                                    width: 85%;
+                                    width: 100%;
                                 }
                             }
                         }
@@ -132,8 +140,14 @@ html {
                                 width: 100%;
                                 display: flex;
                                 min-height: 77%;
-                                flex-direction: row;
+                                flex-direction: column;
                                 padding-top: 3em; 
+                                p {
+                                    font-size: 0.85em;
+                                    font-family: Lato;
+                                    padding-top: 3em;
+                                    line-height: 1.8em;
+                                }
                             }
                         }
                 }
