--- a/src/about.scss
+++ b/src/about.scss
@@ -1,7 +1,18 @@
+$red :#F15854;
+$gray:#4D4D4D;
+$blue:#5DA5DA;
+$yellow:#DECF3F;
+$purple:#B276B2;
+$orange:#FAA43A;
+
+
+
 body {
     .about-container {
         width: 100%;
         height: 100%;
+        display: flex;
+        flex-direction: column;
         .main-title {
             margin-top: 1em;
             margin-bottom: 2em;
@@ -25,17 +36,54 @@ body {
             }
         }
         .about {
-            .portrait {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
+            .about-text {
+                width: 90%;
+                margin: auto;
+                @media (min-width: 768px) {
+                    width: 80%;
+                }
+                .about-me {
+                    font-size: 0.85em;
+                    font-family: Lato;
+                    padding-top: 3em;
+                    line-height: 1.8em;
+                }
             }
-            p {
-                font-size: 0.85em;
-                font-family: Lato;
-                padding-top: 3em;
-                line-height: 1.8em;
+        }
+        .container-facts {
+            
+            button {
+                width: 65%;
+                margin-left: 17.5%;
+                margin-right: 17.5%;
+                padding: 0.9em;
+                font-size: 1.2em;
+                background: transparent;
+                font-family: 'Lato', sans-serif;
+                border: solid 1px #000;
+                border-radius: 5px;
+                cursor: pointer;
+                outline: none;
+                @media (min-width: 768px) {
+                    width: 30%;
+                    margin-left: 35%;
+                    margin-right: 35%;
+                }
+                &:hover {
+                    text-decoration: line-through; 
+                    background-color: rgba(255, 255, 255, 0.6);
+                }
             }
+
+            .facts {
+                margin: 0;
+                padding-top: 2em;
+            }
+        }
+        .portrait {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
     }
 }
