--- a/src/contact.scss
+++ b/src/contact.scss
@@ -29,8 +29,10 @@
             height: 75%;
             margin: auto;
             padding-top: 3em;
+            padding-bottom: 10em;
             @media (min-width: 768px) {
                 width: 55%;
+                padding-bottom: 0;
             }
             @media (min-width: 1024px) {
                 width: 48%;
@@ -55,7 +57,7 @@
                 }
             }
             .submit {
-                width: 100%;
+                width: 50%;
                 padding: 0.2em;
                 font-size: 1.5em;
                 background: transparent;
@@ -69,5 +71,11 @@
                     background-color: rgba(255, 255, 255, 0.6);
                 }
             }
+        }
+        .contact-info {
+            font-size: 0.85em;
+            font-family: Lato;
+            padding-top: 3em;
+            line-height: 1.8em;
         }
     }
