--- a/src/about.scss
+++ b/src/about.scss
@@ -51,7 +51,6 @@ body {
             }
         }
         .container-facts {
-            
             button {
                 width: 65%;
                 margin-left: 17.5%;
@@ -74,7 +73,215 @@ body {
                     background-color: rgba(255, 255, 255, 0.6);
                 }
             }
-
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding-left: 0;
+            }
+            h2 {
+                font-size: 17px;
+            }
+            p {
+                font-size: 15px;
+            }
+            a {
+                text-decoration: none;
+                font-size: 15px;
+            }
+                a:hover {
+                    text-decoration: underline;
+                }
+            
+            h1, h2, p, a, span{
+                color: #000;
+            }
+            .scnd-font-color {
+                color: #000;
+            }
+            .titular {
+                display: block;
+                line-height: 60px;
+                margin: 0;
+                text-align: center;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+            }
+            .horizontal-list {
+                margin: 0;
+                padding: 0;
+                list-style-type: none;
+            }
+            .horizontal-list li {
+                float: left;
+            }
+            .block {
+                margin: 25px 25px 0 0;
+                width: 100%;
+                overflow: hidden;
+            }
+            .menu-box {
+                height: 360px;
+            }
+            
+            .donut-chart-block {
+                overflow: hidden;
+                    
+            }
+            .donut-chart-block .titular {
+                padding: 10px 0;
+            }
+            .os-percentages li {
+                width: 130px;
+                text-align: center;					
+                background: rgba(220,220,220,0.3);
+            }
+            .os {
+                margin: 0;
+                padding: 10px 0 5px;
+                font-size: 15px;		
+            }
+            .os.ios {
+                border-top: 4px solid #e64c65;
+            }
+            .os.mac {
+                border-top: 4px solid #11a8ab;
+            }
+            .os.linux {
+                border-top: 4px solid #fcb150;
+            }
+            .os.win {
+                border-top: 4px solid #4fc4f6;
+            }
+            .os-percentage {
+                margin: 0;
+                padding: 0 0 15px 10px;
+                font-size: 25px;
+            }
+            .line-chart-block, .bar-chart-block {
+                height: 400px;
+            }
+            .line-chart {
+                height: 200px;
+                background: #11a8ab;
+            }
+            .time-lenght {
+                padding-top: 22px;
+                padding-left: 38px;
+                overflow: hidden;
+            }
+            .time-lenght-btn {
+                display: block;
+                width: 70px;
+                line-height: 32px;
+                background: #50597b;
+                border-radius: 5px;
+                font-size: 14px;
+                text-align: center;
+                margin-right: 5px;
+                -webkit-transition: background .3s;
+                transition: background .3s;
+            }
+            .time-lenght-btn:hover {
+                text-decoration: none;
+                background: #e64c65;
+            }
+            .month-data {
+                padding-top: 28px;
+            }
+            .month-data p {
+                display: inline-block;
+                margin: 0;
+                padding: 0 25px 15px;            
+                font-size: 16px;
+            }
+            .month-data p:last-child {
+                padding: 0 25px;
+                float: right;
+                font-size: 15px;
+            }
+            .increment {
+                color: #e64c65;
+            }
+            .donut-chart {
+                position: relative;
+                width: 200px;
+                height: 200px;
+                margin: 0 auto 2rem;
+                border-radius: 100%
+            }
+            p.center-date {
+                background: #fff;
+                position: absolute;
+                text-align: center;
+                font-size: 28px;
+                top:0;left:0;bottom:0;right:0;
+                width: 130px;
+                height: 97px;
+                margin: auto;
+                border-radius: 50%;
+                line-height: 35px;
+                padding: 15% 0 0;
+            }
+            .center-date span.scnd-font-color {
+             line-height: 0; 
+            }
+            .recorte {
+                border-radius: 50%;
+                clip: rect(0px, 200px, 200px, 100px);
+                height: 100%;
+                position: absolute;
+                width: 100%;
+              }
+            .piece {
+                border-radius: 50%;
+                clip: rect(0px, 100px, 200px, 0px);
+                height: 100%;
+                position: absolute;
+                width: 100%;
+                font-family: Lato;
+                font-size: 1.5rem;
+              }
+            #portion1 {
+                transform: rotate(0deg);
+              }
+            #portion1 .piece{
+                background-color: #E64C65;
+                transform: rotate(76deg);
+              }
+            #portion2 {
+                transform: rotate(76deg);
+              }
+            #portion2 .piece {
+                background-color: #11A8AB;
+                transform: rotate(140deg);
+              }
+            #portion3 {
+                transform: rotate(215deg);
+              }
+            #portion3 .piece {
+                background-color: #4FC4F6;
+                transform: rotate(113deg);
+              }
+            #portionFin {
+                transform:rotate(-32deg);
+              }
+            #portionFin .piece {
+                background-color: #FCB150;
+                transform: rotate(32deg);
+            }
+            .nota-final {
+                clear: both;
+                color: #4FC4F6;
+                font-size: 1rem;
+                padding: 2rem 0;
+            }
+            .nota-final strong {
+                color: #E64C65;
+            }
+            .nota-final a {
+                color: #FCB150;
+                font-size: inherit;
+            }
             .facts {
                 margin: 0;
                 padding-top: 2em;
