--- a/src/style.scss
+++ b/src/style.scss
@@ -35,21 +35,21 @@ html {
                     color: $color-black;
                     text-decoration: none;
                 }
-                #myVideo {
-                    position: fixed;
-                 
-               
-                    min-width: 100%; 
-               
-                    z-index: -1;
-                }
+                // #myVideo {
+                //     position: fixed;
+                //     right: 0;
+                //     bottom: 0;
+                //     min-width: 100%; 
+                //     height: 60%;
+                //     z-index: -1;
+                // }
                 .container {
                     display: flex;
                     height: 100%;
                     width: 100%;
                     flex-direction: column;
                     justify-content: space-between;
-                    //background: url(/img/lavender-mobil.svg); 
+                    background: url(/img/lavender-mobil.svg); 
                     -webkit-background-size: contain;
                     -moz-background-size: contain;
                     -o-background-size: contain;
@@ -103,7 +103,7 @@ html {
                                     font-size: 2.5em;
                                     background: rgba(255,255,255,0.5);
                                     font-family: 'Lato', sans-serif;
-                                    //border: solid 1px $color-black;
+                                    border: solid 1px $color-black;
                                     border-radius: 5px;
                                     letter-spacing: 2px;
                                     cursor: pointer;
