Added pictures to slides

--- a/src/style.scss
+++ b/src/style.scss
@@ -213,6 +213,7 @@ html {
                     flex-direction: row;
                     justify-content: flex-end;
                     margin-right: 1em;
+                    margin-top: 3em;
                     .about {
                         padding-right: 21px;
                         cursor: pointer;
