--- a/src/contact.scss
+++ b/src/contact.scss
@@ -1,81 +1,81 @@
 
 .contact-container {
-        width: 100%;
-        height: 100%;
-        .main-title {
-            margin-top: 1em;
-            margin-bottom: 2em;
-            font-size: 0.7em;
-            text-align: center;
-            h1 {
-                font-family: 'Italiana', serif;
-                font-size: 4.6em;
-                font-weight: 100;
-                margin:0;
-                cursor: pointer;
-                @media (min-width: 768px) {
-                    font-size: 4.6em;
-                }
-            }
-            h5 {
-                font-size: 1em;
-                margin:0;
-                margin-top: -2em;
-                cursor: pointer;
-            }
-        }
-        .form-container {
-            width: 80%;
-            height: 75%;
-            margin: auto;
-            padding-top: 3em;
-            padding-bottom: 10em;
+    width: 100%;
+    height: 100%;
+    .main-title {
+        margin-top: 1em;
+        margin-bottom: 2em;
+        font-size: 0.7em;
+        text-align: center;
+        h1 {
+            font-family: 'Italiana', serif;
+            font-size: 4.6em;
+            font-weight: 100;
+            margin:0;
+            cursor: pointer;
             @media (min-width: 768px) {
-                width: 55%;
-                padding-bottom: 0;
-            }
-            @media (min-width: 1024px) {
-                width: 48%;
-            }
-            h3 {
-                font-size: 1.5em;
-                font-family: Lato;
-            }
-            fieldset {
-                margin-bottom: 0.6em;
-                border-radius: 5px;
-                border: 1px solid #CCC;
-                outline: none;
-                font-family: Lato;
-                input, textarea {
-                    border: none;
-                    outline: none;
-                    font-family: Lato;
-                    font-size: 11px;
-                    width: 90%;
-                    padding: 10px;
-                }
-            }
-            .submit {
-                width: 50%;
-                padding: 0.2em;
-                font-size: 1.5em;
-                background: transparent;
-                font-family: 'Lato', sans-serif;
-                border: solid 1px #000;
-                border-radius: 5px;
-                cursor: pointer;
-                outline: none;
-                &:hover {
-                    text-decoration: line-through; 
-                    background-color: rgba(255, 255, 255, 0.6);
-                }
+                font-size: 4.6em;
             }
         }
-        .contact-info {
-            font-size: 0.85em;
-            font-family: Lato;
-            padding-top: 3em;
-            line-height: 1.8em;
+        h5 {
+            font-size: 1em;
+            margin:0;
+            margin-top: -2em;
+            cursor: pointer;
         }
     }
+    .form-container {
+        width: 80%;
+        height: 75%;
+        margin: auto;
+        padding-top: 3em;
+        padding-bottom: 10em;
+        @media (min-width: 768px) {
+            width: 55%;
+            padding-bottom: 0;
+        }
+        @media (min-width: 1024px) {
+            width: 48%;
+        }
+        h3 {
+            font-size: 1.5em;
+            font-family: Lato;
+        }
+        fieldset {
+            margin-bottom: 0.6em;
+            border-radius: 5px;
+            border: 1px solid #000;
+            outline: none;
+            font-family: Lato;
+            input, textarea {
+                border: none;
+                outline: none;
+                font-family: Lato;
+                font-size: 12px;
+                width: 90%;
+                padding: 10px;
+            }
+        }
+        .submit {
+            width: 50%;
+            padding: 0.2em;
+            font-size: 1.5em;
+            background: transparent;
+            font-family: 'Lato', sans-serif;
+            border: solid 1px #000;
+            border-radius: 5px;
+            cursor: pointer;
+            outline: none;
+            &:hover {
+                text-decoration: line-through; 
+                background-color: rgba(255, 255, 255, 0.6);
+            }
+        }
+    }
+    .contact-info {
+        font-size: 0.85em;
+        font-family: Lato;
+        padding-top: 3em;
+        line-height: 1.8em;
+    }
+}
