--- a/src/contact.scss
+++ b/src/contact.scss
@@ -26,13 +26,14 @@
     }
     .form-container {
         width: 80%;
-        height: 75%;
+        //height: 100%;
         margin: auto;
         padding-top: 3em;
-        padding-bottom: 10em;
+        padding-bottom: 0;
         @media (min-width: 768px) {
             width: 55%;
-            padding-bottom: 0;
+            height: 100%;
+            
         }
         @media (min-width: 1024px) {
             width: 48%;
