--- a/src/about.scss
+++ b/src/about.scss
@@ -38,6 +38,9 @@ body {
                 @media (min-width: 768px) {
                     width: 60%;
                 }
+                @media (min-width: 1500px) {
+                    width: 40%;
+                }
                 .about-me {
                     font-size: 0.85em;
                     font-family: Lato;
@@ -46,10 +49,14 @@ body {
                 }
             }
         }
-        .portrait {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+        .img-container {
+            height: 100%;
+            width: 100%;
+            .portrait {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
         }
     }
 }
