Added link style to project page

--- a/src/style.scss
+++ b/src/style.scss
@@ -218,6 +218,11 @@ html {
                                 font-size: 0.85em;
                             } 
                         }
+                        .visit {
+                            text-align: center;
+                            padding-bottom: 1em;
+                            font-size: 0.85em;
+                        }
                     }
                     .project-content-spices {
                         padding-top: 2em;
